# littercam

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/static/: styles.css
app/templates/: base.html  event_detail.html  events.html  highlights.html  latest.html  live.html
config/: littercam.yaml
scripts/: cleanup_noise.py  download_model.sh  install.sh  rescan_events.py  test_cat_detect.py  test_motion.py
src/littercam/: __init__.py  camera.py  capture_service.py  cat_detector.py  config.py  detection.py  events.py  live_stream.py  logging.py  prune.py  run_capture.py
systemd/: littercam-capture.service  littercam-prune.service  littercam-prune.timer  littercam-web.service
tests/: test_events.py
